implemented review comments